--- a/lib/fora_web/templates/id/components/invite_live_2fa_form.html.leex
+++ b/lib/fora_web/templates/id/components/invite_live_2fa_form.html.leex
@@ -1,24 +1,24 @@
-    <%= f = form_for @changeset, "#",
-      name: "model",
-      id: "invite-form",
-      phx_change: "validate",
-      class: "space-y-6",
-      phx_target: @myself,
-      phx_submit: "save" %>
-
-
   <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
     <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10 justify-center">
 
 
-      <div class="text-center object-center w-full">
-  <%=raw( @secret_2fa_qr_code )%>
+    <%= f = form_for @changeset, "#",
+      name: "model",
+      id: "invite-form",
+      phx_change: "validate",
+      class: "space-y-6 flex flex-col justify-center",
+      phx_target: @myself,
+      phx_submit: "save" %>
+
+
+      <div class="flex justify-center">
+        <%=raw( @secret_2fa_qr_code )%>
       </div>
 
         <div>
           <%= label f, :totp_verification, class: "block text-sm font-medium text-gray-700" %>
           <div class="mt-1">
-            <%= text_input f, :totp_verification, maxlength: 6, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+            <%= text_input f, :totp_verification, maxlength: 6, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm", phx_debounce: "blur" %>
           </div>
             <%= error_tag f, :totp_verification, class: "mt-2 text-sm text-red-600" %>
         </div>
@@ -28,12 +28,13 @@
 
 
 
-        <div class="justify-self-end">
+        <div class="flex justify-center">
 
-  <%= submit "Submit", phx_disable_with: "Next...", class: "w-1/2 flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+          <%= submit "Submit",
+                phx_disable_with: "Submit...",
+                class: "w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
         </div>
     </div>
+    </form>
   </div>
 </div>
-</form>
-
