--- a/lib/fora_web/templates/id/components/invite_live_registration_form.html.leex
+++ b/lib/fora_web/templates/id/components/invite_live_registration_form.html.leex
@@ -1,3 +1,7 @@
+<div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+  <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+
+
 <%= f = form_for @changeset, "#",
 name: "model",
 id: "invite-form",
@@ -7,12 +11,9 @@ phx_target: @myself,
 phx_submit: "save" %>
 
 
-<div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
-  <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-
 
     <div>
-      <%= label f, :email, class: "block text-sm font-medium text-gray-700" %>
+      <%= label f, :email, class: "block text-sm font-medium text-gray-700 select-none" %>
       <div class="mt-1">
         <%= text_input f, :email, disabled: true, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
       </div>
@@ -20,16 +21,16 @@ phx_submit: "save" %>
     </div>
 
     <div>
-      <%= label f, :first_name, class: "block text-sm font-medium text-gray-700" %>
+      <%= label f, :first_name, class: "block text-sm font-medium text-gray-700 select-none" %>
       <div class="mt-1">
-        <%= text_input f, :first_name, required: true, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+        <%= text_input f, :first_name, required: true, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm", phx_debounce: "blur" %>
       </div>
       <%= error_tag f, :first_name, class: "mt-2 text-sm text-red-600" %>
     </div>
 
 
     <div>
-      <%= label f, :last_name, class: "block text-sm font-medium text-gray-700" %>
+      <%= label f, :last_name, class: "block text-sm font-medium text-gray-700 select-none" %>
       <div class="mt-1">
         <%= text_input f, :last_name, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
       </div>
@@ -37,13 +38,13 @@ phx_submit: "save" %>
     </div>
 
     <div>
-      <%= label f, :password, class: "block text-sm font-medium text-gray-700" %>
+      <%= label f, :password, class: "block text-sm font-medium text-gray-700 select-none" %>
 
       <div class="mt-1">
         <%= if Keyword.get_values(f.errors, :password)!= [] and f.source.changes[:password] do
-text_input f, :password, class: "block w-full pr-10 border-red-300 text-red-900 placeholder-red-300 focus:outline-none focus:ring-red-500 focus:border-red-500 sm:text-sm rounded-md", "aria-invalid": "true", required: true, autocomplete: "current-password" 
+text_input f, :password, class: "block w-full pr-10 border-red-300 text-red-900 placeholder-red-300 focus:outline-none focus:ring-red-500 focus:border-red-500 sm:text-sm rounded-md", "aria-invalid": "true", required: true, autocomplete: "current-password" , phx_debounce: "blur"
 else
-text_input f, :password, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm", required: true, autocomplete: "current-password" 
+text_input f, :password, class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm", required: true, autocomplete: "current-password" , phx_debounce: "blur"
 end
           %>
 
@@ -54,11 +55,12 @@ end
     </div>
 
 
-    <div class="justify-self-end">
-
+    <div class="flex justify-end">
       <button class="w-1/2 flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Next</button>
     </div>
+
   </div>
-</div>
-</div>
 </form>
+</div>
+</div>
+
