--- a/lib/fora_web/templates/id/invite_live.html.leex
+++ b/lib/fora_web/templates/id/invite_live.html.leex
@@ -8,7 +8,7 @@
   <%= live_component @socket, ForaWeb.Id.InviteLiveProgressBarComponent, form_step: @form_step %>
 
   <%= if @form_step == :form1 do %>
-    <%= live_component @socket, ForaWeb.Id.InviteLiveRegistrationFormComponent, id: :form1, invite: @invite %>
+    <%= live_component @socket, ForaWeb.Id.InviteLiveRegistrationFormComponent, id: :form1, invite: @invite, invitation_token: @invitation_token %>
   <% end %>
 
   <%= if @form_step == :form2 do %>
